--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.3",
-    "morgan": "^1.9.0"
+    "express": "^4.18.2",
+    "joi": "^17.8.3",
+    "mongoose": "^7.0.0",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
