--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.18.2",
     "joi": "^17.8.3",
     "mongoose": "^7.0.0",
+    "mongoose-paginate": "^5.0.3",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
