--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "joi": "^17.8.3",
     "mongoose": "^7.0.0",
     "mongoose-paginate": "^5.0.3",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "swagger-ui-express": "^4.6.2"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
