--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "bcryptjs": "^2.4.3",
     "express": "^4.18.2",
     "joi": "^17.8.3",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.0",
     "mongoose-paginate": "^5.0.3",
     "morgan": "^1.10.0",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.1",
     "swagger-ui-express": "^4.6.2"
   },
   "devDependencies": {
